imagem introduzida, e ajuste

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <main>
         <section id="login">
             <div id="imagem">
+                <!--AQUI VAI A IMAGEM NA CSS-->
 
             </div>
-            <div id="formulário">
+            <div id="formulario">
                 <h1>Login</h1>
                 <p>
                     Seja bem vindo(a) novamente. Faça Login para acessar a aréa de cliente
-                    <form action="loin.php" method="post"></form>
+                    <form action="login.php" method="post"></form>
                 </p>
 
             </div>
