--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -18,9 +20,31 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>
-                    Seja bem vindo(a) novamente. Faça Login para acessar a aréa de cliente
-                    <form action="login.php" method="post"></form>
-                </p>
+                    Seja bem vindo(a) novamente. Faça Login para acessar a aréa de cliente</p>
+                    <form action="login.php" method="post" autocomplete="on"></
+                    <div class="campo">
+                        <span class="material-icons">
+                            person
+                            </span>
+                            
+                        <input type="email" name="login" id="ilogin"  placeholder="e-mail" autocomplete="email" required minlength="8" maxlength="20">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">
+                            vpn_key
+                            </span>
+                            
+                        <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="5" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#">Esqueci a senha
+                        <span class="material-icons">
+                            mail
+                            </span>
+                    </a>
+                </form>
 
             </div>
         </section>
