--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <h1>Login</h1>
                 <p>
                     Seja bem vindo(a) novamente. Faça Login para acessar a aréa de cliente</p>
-                    <form action="login.php" method="post" autocomplete="on"></
-                    <div class="campo">
+                    <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo1">
                         <span class="material-icons">
                             person
                             </span>
@@ -30,7 +30,7 @@
                         <input type="email" name="login" id="ilogin"  placeholder="e-mail" autocomplete="email" required minlength="8" maxlength="20">
                         <label for="ilogin">Login</label>
                     </div>
-                    <div class="campo">
+                    <div class="campo2">
                         <span class="material-icons">
                             vpn_key
                             </span>
@@ -39,7 +39,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="#">Esqueci a senha
+                    <a class="botao" href="#">Esqueci a senha
                         <span class="material-icons">
                             mail
                             </span>
